	  and link_close() functions to static, and modified
	  get_hardware_address() and get_source_ip() functions to call
	  link_open/link_close directly. Included link_t typedef in
	  link_handle struct declaration.

	* configure.ac: Change the libpcap function check from
	  pcap_lib_version() to pcap_sendpacket(), to ensure that we have
	  a recent enough version of libpcap.

2013-04-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* Modified copyright statement in files to include up to 2013.

	* get-oui, get-iab: Modified regex to allow optional whitespace at
	  the beginning of line.

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* check-decode: Updated for new IEEE OUI vendors.

	* configure.ac: Incremented version number to 1.8.3.

	* arp-scan.c: Removed unneeded errlen declaration to avoid "set but
	  not used" warning with GCC 4.6 and later.

2013-01-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added Windows 8

2012-08-08 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Added OS pattern for Dragonfly BSD.

2012-06-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for BeOS.

2012-05-29 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Copy the pcap_header->ts structure to a temporary
	  struct timeval before passing to timeval_diff during rtt calculation.
	  We can't pass a pointer to pcap_header->ts directly to timeval_diff
	  because it's not guaranteed to have the same size as a struct
	  timeval. E.g. OpenBSD 5.1 on amd64. Thanks to Stuart Henderson at
	  OpenBSD for spotting this bug.

2012-05-20 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-iab: Applied patch from Stuart Henderson at OpenBSD.
	  This allows the -u (alternative URL) option to be correctly handled,
	  and changes the default URLs to the new locations on the IEEE
	  website (the old locations still work, but with a redirect).
