@@ -18,6 +18,12 @@ $Id$
 	  pcap_lib_version() to pcap_sendpacket(), to ensure that we have
 	  a recent enough version of libpcap.
 
+	* arp-scan.c: New function get_source_ip() to get the interface IP
+	  address using platform-independent code.
+
+	* link-bpf.c, link-dlpi.c, link-packet-socket.c: Removed unneeded
+	  link-layer specific get_source_ip() functions.
+
 2013-04-15 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* Modified copyright statement in files to include up to 2013.
